force-app/main/default/objects/AcumenMerge__Robot__c/AcumenMerge__Robot__c.object-meta.xml
<CustomObject>
    <label>Robot</label>
    <nameField>
        <label>Robot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Robots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>