force-app/main/default/objects/AcumenMerge__Robot__c/fields/AcumenMerge__Cost__c.field-meta.xml
<CustomField>
    <fullName>AcumenMerge__Cost__c</fullName>
    <description>Cost to build or create the robot</description>
    <label>Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>