force-app/main/default/objects/AcumenMerge__Robot__c/fields/AcumenMerge__Mobility__c.field-meta.xml
<CustomField>
    <fullName>AcumenMerge__Mobility__c</fullName>
    <label>Mobility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Treads</fullName>
            </value>
            <value>
                <fullName>Wheels</fullName>
            </value>
            <value>
                <fullName>Anti-gravity/Hover</fullName>
            </value>
            <value>
                <fullName>Flight</fullName>
            </value>
            <value>
                <fullName>Bipedal</fullName>
            </value>
            <value>
                <fullName>Tripodal</fullName>
            </value>
            <value>
                <fullName>Quadrupedal</fullName>
            </value>
            <value>
                <fullName>5+ Legs</fullName>
            </value>
            <value>
                <fullName>Teleportation</fullName>
            </value>
            <value>
                <fullName>Submersible</fullName>
            </value>
            <value>
                <fullName>Digging/Tunneling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>