force-app/main/default/objects/AcumenMerge__Robot__c/fields/AcumenMerge__Number__c.field-meta.xml
<CustomField>
    <fullName>AcumenMerge__Number__c</fullName>
    <description>Number of these robots in existance</description>
    <label>Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>