force-app/main/default/objects/AcumenMerge__Robot__c/fields/AcumenMerge__Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>AcumenMerge__Parent_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The company that owns this robot</description>
    <label>Parent Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Robots</relationshipLabel>
    <relationshipName>Robots</relationshipName>
    <type>Lookup</type>
</CustomField>