force-app/main/default/objects/AcumenMerge__Robot__c/listViews/AcumenMerge__All.listView-meta.xml
<ListView>
    <fullName>AcumenMerge__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>